fixin' covers to match autocomplete

--- a/src/PathComplete/style.scss
+++ b/src/PathComplete/style.scss
@@ -5,7 +5,7 @@
 .ant-select-auto-complete {
   font-size: 4ex ! important;
   margin: auto;
-  width: 75%;
+  width: 100%;
 
   input {
     height: auto ! important;
